kubernetes/apps/home-automation/influxdb/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  creationTimestamp: null
  generation: 1
  labels:
    app: influxdb
  name: influxdb
  namespace: observability
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: influxdb
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: influxdb
    spec:
      containers:
      - image: influxdb:2.7.10-alpine
        imagePullPolicy: Always
        name: influxdb
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
          - mountPath: /var/lib/influxdb2
            subPath: influxdb
            name: data
        ports:
          - containerPort: 8086
        command: ["/bin/bash", "-c"]
        args:
          - |
            sed -i 's/${user} = 0/${user} = 1/g' /entrypoint.sh;
            /entrypoint.sh;
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: unraid-pvc
