kubernetes/apps/home-automation/influxdb/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  namespace: observability
  labels:
    app: influxdb
spec:
  selector:
    app: influxdb
  type: ClusterIP
  ports:
    - protocol: TCP
      name: "webui"
      port: 8086
      targetPort: 8086
