kubernetes/apps/home-automation/influxdb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: influxdb
  namespace: home-automation
  labels:
    name: influxdb
spec:
  ingressClassName: internal
  rules:
  - host: influx.tnorbert.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: influxdb
            port:
              number: 8086
